skins/vector/main.css
/* ... */
body.rtl div#head {
	right: auto;
	left: 0;
	margin-right: 0;
	margin-left: 0.75em;
}
div#head ul,
div#head li {
	list-style: none;
	margin: 0;
	padding: 0;
}
div#head h5 {
	margin: 0;
	padding: 0;
}
	/* Personal */
	div#personal {
		position: absolute;
		top: 0;
		right: 0;
	}
	body.rtl div#personal {
		left: 0;
		right: auto;
	}
	div#personal h5 {
		display: none;
	}
	div#personal li {
		float: left;
		margin-left: 0.75em;
		margin-top: 0.5em;
		font-size: 0.9em;
	}
	body.rtl div#personal li {
		float: right;
		margin-left: 0;
		margin-right: 0.75em;
	}
	/* Navigation */
	div#left-navigation {
		margin-top: 3em;
		margin-left: 12.75em;
	}
	body.rtl div#left-navigation {
		margin-left: 0;
		margin-right: 12.75em;
	}
	div#right-navigation {
		float: right;
	}
	body.rtl div#right-navigation {
		float: left;
	}
	/* Navigation Labels */
	div#namespaces h5,
	div#variants h5,
	div#views h5,
	div#actions h5 span,
	div#search h5 {
		display: none;
	}
	/* Namespaces and Views */
	div#namespaces,
	div#views {
		float: left;
		background-image: url(images/tab-break.png);
		background-position: bottom left;
		background-repeat: no-repeat;
		padding-left: 1px;
	}
	body.rtl div#namespaces,
	body.rtl div#views {
		float: right;
		background-position: bottom right;
		padding-left: 0;
		padding-right: 1px;
	}
	div#namespaces ul,
	div#views ul {
		float: left;
	}
	body.rtl div#namespaces ul,
	body.rtl div#views ul {
		float: right;
	}
	div#namespaces li,
	div#views li {
		float: left;
		line-height: 3em;
		background-image: url(images/tab-normal-fade.png);
		background-position: bottom left;
		background-repeat: repeat-x;
	}
	body.rtl div#namespaces li,
	body.rtl div#views li {
		float: right;
		background-position: bottom right;
	}
	div#namespaces li.selected,
	div#views li.selected {
		background-image: url(images/tab-current-fade.png);
	}
	div#namespaces a,
	div#views a {
		display: inline-block;
		height: 3em;
		padding-left: 0.5em;
		padding-right: 0.5em;
		background-image: url(images/tab-break.png);
		background-position: bottom right;
		background-repeat: no-repeat;
		color: #0645ad;
	}
	body.rtl div#namespaces a,
	body.rtl div#views a {
		background-position: bottom left;
	}
	div#namespaces li.selected a,
	div#views li.selected a:visited {
		color: #333333;
		cursor: default;
		text-decoration: none;
	}
	div#namespaces li.new a,
	div#namespaces li.new a:visited{
		color: #a55858;
	}
	/* Variants and Actions */
	div#variants,
	div#actions {
		float: left;
		background-image: url(images/arrow-down-icon.png);
		background-position: center center;
		background-repeat: no-repeat;
	}
	body.rtl div#variants,
	body.rtl div#actions {
		float: right;
	}
	div#variants h5,
	div#actions h5 {
		float: left;
	}
	body.rtl div#variants h5,
	body.rtl div#actions h5 {
		float: right;
	}
	div#variants h5 a,
	div#actions h5 a {
		display: inline-block;
		width: 24px;
		height: 3em;
		text-decoration: none;
		background-image: url(images/tab-break.png);
		background-position: bottom right;
		background-repeat: no-repeat;
	}
	body.rtl div#variants h5 a,
	body.rtl div#actions h5 a {
		display: inline-block;
		background-position: bottom left;
	}
	div#variants div.menu,
	div#actions div.menu {
		display: none;
		clear: both;
	}
	div#variants:hover div.menu,
	div#actions:hover div.menu {
		display: block;
	}
	div#variants ul,
	div#actions ul {
		position: absolute;
		background-color: white;
		border: solid 1px silver;
		border-top-width: 0;
		padding: 0;
		margin: 0;
		margin-left: -1px;
	}
	body.rtl div#variants ul,
	body.rtl div#actions ul {
		margin-left: 0;
		margin-right: -1px;
	}
	div#variants:hover li a,
	div#actions li a {
		display: inline-block;
		padding: 0.5em;
	}
	/* Search */
	div#search {
		float: left;
	}
	body.rtl div#search {
		float: right;
	}
	div#search form,
	div#search input {
		float: left;
		margin-top: 0.4em;
		margin-left: 0.25em;
	}
	body.rtl div#search form,
	body.rtl div#search input {
		float: right;
		margin-left: 0;
		margin-right: 0.25em;
	}
/* Panel */
div#panel {
	position: absolute;
	top: 12em;
	width: 12em;
	left: 0;
}
body.rtl div#panel {
	left: auto;
	right: 0;
}
	div#panel div.portal {
		padding-top: 1.5em;
	}
	div#panel div.portal h5 {
		font-weight: normal;
		color: #666666;
		padding: 0.5em;
		padding-top: 0;
		padding-bottom: 0.33em;
		padding-left: 1.25em;
		cursor: default;
	}
	body.rtl div#panel div.portal h5 {
		padding: 0;
		margin: 0;
		padding-left: 0;
		padding-right: 1.25em;
	}
	div#panel div.portal div.body {
		padding-top: 0.33em;
		margin-left: 1.25em;
		background-image: url(images/portal-break.png);
		background-repeat: no-repeat;
		background-position: top left;
	}
	body.rtl div#panel div.portal div.body {
		padding-left: 0;
		margin-right: 1.25em;
		background-position: top right;
	}
	div#panel div.portal div.body ul {
		list-style: none;
		padding: 0;
		margin: 0;
	}
	div#panel div.portal div.body ul li {
		padding: 0;
		padding-bottom: 0.5em;
		margin: 0;
		overflow: hidden;
	}
	div#panel div.portal div.body ul li a {
		color: #0645ad;
	}
	div#panel div.portal div.body ul li a:visited {
		color: #0b0080;
	}
/* Foot */
div#foot {
	margin-left: 12em;
	margin-top: 0;
	padding: 0.75em;
	background-image: url(images/foot-base.png);
	background-position: top left;
	background-repeat: repeat-x;
}
body.rtl div#foot {
	margin-left: 0;
	margin-right: 12em;
	background-position: top right;
}
div#foot ul {
	list-style: none;
	margin: 0;
	padding: 0;
}
div#foot ul li {
	margin: 0;
	padding: 0;
	padding-top: 0.5em;
	padding-bottom: 0.5em;
	color: #333333;
	font-size: 0.9em;
}
div#foot ul#foot-icons {
	float: right;
}
body.rtl div#foot ul#foot-icons {
	float: left;
}
div#foot ul#foot-places {
	float: left;
}
body.rtl div#foot ul#foot-places {
	float: right;
}
div#foot ul#foot-icons li {
	float: left;
	margin-left: 0.5em;
	line-height: 2em;
}
body.rtl div#foot ul#foot-icons li {
	float: right;
	margin-left: 0;
	margin-right: 0.5em;
}
/* ... */

